<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Super Waiter</string>
    <string name="dummy_button">Continue</string>
    <string name="dummy_content">Welcome to Super Waiter</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="title_activity_main">Clock In/Out</string>
    <string name="header"></string>
    <string name="action_settings">Settings</string>
    <string name="clockin">Clock In</string>
    <string name="clockout">Clock Out</string>
    <string name="Save">Save</string>
    <string name="title_activity_data_sheet">Data Sheet</string>
    <string name="hello_world">Hello world!</string>
    <string name="report_header">Attendance Report</string>
    <string name="header_clockin">In</string>
    <string name="header_clockout">Out</string>
    <string name="header_payoff">Payoff</string>
    <string name="header_shiftdate">Date</string>
    <string name="header_totalhours">Tot Hrs</string>
    <string name="header_tipsCash">Tips Cash</string>
    <string name="header_tipsCredit">Tips Credit</string>
    <string name="header_profit">Profit</string>
    <string name="tips_cash_edit_hint">Enter cash tips</string>
    <string name="tips_credit_edit_hint">Enter credit tips</string>
    <string name="menu_submit">Submit</string>
    <string name="menu_report">Show Report</string>
    <string name="dialog_edit">Edit Attendance</string>
    <string name="dialog_edit_message">Edit the following fields</string>
    <string name="dialog_delete_message">Are you sure you want to delete this record?</string>
    <string name="title_activity_settings">Settings</string>
    <string name="payment_rate">Payment Rate</string>
    <string name="menu_save">Save</string>
    <string name="help">Help</string>
    <string name="help_message">To edit, one click on the record. To delete, long click on the record.</string>
     
    
</resources>