<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/dialog_date_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:text="@string/header_shiftdate" />

        <TextView
            android:id="@+id/dialog_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_dialog_clockin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:text="@string/header_clockin" />

        <EditText
            android:id="@+id/dialog_clockin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:hint="@string/header_clockin"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_dialog_clockout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:text="@string/header_clockout" />

        <EditText
            android:id="@+id/dialog_clockout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:hint="@string/header_clockout"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_dialog_tipsCash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:text="@string/header_tipsCash" />

        <EditText
            android:id="@+id/dialog_tipsCash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number|numberSigned|numberDecimal"
            android:layout_weight="0.25"
            android:hint="@string/header_tipsCash"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_dialog_tipsCredit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:text="@string/header_tipsCredit" />

        <EditText
            android:id="@+id/dialog_tipsCredit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number|numberSigned|numberDecimal"
            android:layout_weight="0.25"
            android:hint="@string/header_tipsCredit" />
    </LinearLayout>

</LinearLayout>