<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="match_parent"
    android:background="@drawable/bgwaiter"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <DatePicker
            android:id="@+id/dpResult"
            android:scaleY="0.9" 
			android:scaleX="0.9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/clockin"
            android:layout_margin="5dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="0.5"
            android:background="#33b5e5"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/clockin"
            android:textSize="15sp" />

       

        <Button
            android:id="@+id/clockout"
            android:layout_margin="5dp"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="0.5"
            android:background="#33b5e5"
            android:text="@string/clockout"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:weightSum="2"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/clockin_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:gravity="center"
            android:textSize="15sp" />


        <TextView
            android:id="@+id/clockout_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="15sp" />
    </LinearLayout>



   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/tips_cash_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_margin="5dp"
            android:inputType="number|numberSigned|numberDecimal"
            android:gravity="center"
            android:hint="@string/tips_cash_edit_hint"
            android:textSize="15sp" />

       

        <EditText
            android:id="@+id/tips_credit_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="0.5"
            android:inputType="number|numberSigned|numberDecimal"
            android:gravity="center"
            android:hint="@string/tips_credit_edit_hint"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>
</ScrollView>